--- a/.github/workflows/actions-openwrt.yml
+++ b/.github/workflows/actions-openwrt.yml
@@ -9,14 +9,19 @@
 name: Build OpenWrt
 
 on:
-  repository_dispatch:
-  release:
-    types: published
   push:
     branches:
       - master
-    paths:
-      - '.config'
+      -
+      # on:
+      # repository_dispatch:
+      # release:
+      # types: published
+      # push:
+      # branches:
+      # - master
+      # paths:
+        # - '.config'
 #  schedule:
 #    - cron: 0 8 * * 5
 #  watch:
@@ -39,7 +44,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-18.04
-    # if: github.event.repository.owner.id == github.event.sender.id
+    if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
       - name: Checkout
