--- a/.github/workflows/newifi.yml
+++ b/.github/workflows/newifi.yml
@@ -9,21 +9,16 @@
 name: Build OpenWrt
 
 on:
-  push:
-    branches:
-      - master
-      -
-      # on:
-      # repository_dispatch:
-      # release:
-      # types: published
-      # push:
-      # branches:
-      # - master
-      # paths:
-        # - '.config'
-#  schedule:
-#    - cron: 0 8 * * 5
+  repository_dispatch:
+  #  release:
+  #    types: published
+  #  push:
+  #    branches:
+  #      - master
+  #    paths:
+  #      - '.config'
+  schedule:
+    - cron: 0 8 */5 * *
 #  watch:
 #    types: started
 
@@ -37,14 +32,15 @@ env:
   SSH_ACTIONS: false
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: false
-  UPLOAD_WETRANSFER: false
+  UPLOAD_COWTRANSFER: true
+  UPLOAD_WETRANSFER: true
+  UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
 
 jobs:
   build:
     runs-on: ubuntu-18.04
-    # if: github.event.repository.owner.id == github.event.sender.id
+    if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
       - name: Checkout
@@ -141,9 +137,29 @@ jobs:
           curl -fsSL git.io/file-transfer | sh
           ./transfer cow --block 2621440 -s -p 64 --no-progress ${FIRMWARE} 2>&1 | tee cowtransfer.log
           echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
+          echo "::set-env name=COWTRANSFER_URL::$(cat cowtransfer.log | grep https | cut -f3 -d" ")"
       - name: Upload firmware to WeTransfer
         if: steps.organize.outputs.status == 'success' && env.UPLOAD_WETRANSFER == 'true' && !cancelled()
         run: |
           curl -fsSL git.io/file-transfer | sh
           ./transfer wet -s -p 16 --no-progress ${FIRMWARE} 2>&1 | tee wetransfer.log
           echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
+          echo "::set-env name=WETRANSFER_URL::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
+      - name: Generate tag
+        id: tag
+        if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+        run: |
+          echo "::set-env name=RELEASE_TAG::$(date +"%Y.%m.%d-%H")"
+          echo "🚀 Auto build" >> release.txt
+          echo "🔗 [Cowtransfer](${{ env.COWTRANSFER_URL }})" >> release.txt
+          echo "🔗 [WeTransfer](${{ env.WETRANSFER_URL }})" >> release.txt
+          echo "::set-output name=status::success"
+      - name: Upload firmware to release
+        uses: softprops/action-gh-release@v1
+        if: steps.tag.outputs.status == 'success' && !cancelled()
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        with:
+          tag_name: ${{ env.RELEASE_TAG }}
+          body_path: release.txt
+          files: ${{ env.FIRMWARE }}/*
