--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -32,3 +32,8 @@ jobs:
       - name: apt update
         run: ls
 
+      - name: move
+        run: |
+        mkdir lede
+        mv $CONFIG_FILE lede/.config
+
