--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -29,6 +29,9 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@master
+
       - name: apt update
         run: ls -l
 
