--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -38,11 +38,15 @@ jobs:
         uses: actions/checkout@master
 
 
-      - name: Load custom configuration
+      - name: Clone source code
+        working-directory: /workdir
         run: |
-          [ -e files ] && mv files openwrt/files
-          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-          chmod +x $DIY_P2_SH
+          df -hT $PWD
+          git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+      - name: Load custom feeds
+        run: |
+          [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+          chmod +x $DIY_P1_SH
           cd openwrt
-          $GITHUB_WORKSPACE/$DIY_P2_SH
-
+          $GITHUB_WORKSPACE/$DIY_P1_SH
