--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -34,16 +34,15 @@ jobs:
     # if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
-
-
-      - name: Initialization environment
-        run: |
-          sudo mkdir -p /workdir
-          sudo chown $USER:$GROUPS /workdir
+      - name: Checkout
+        uses: actions/checkout@master
 
 
       - name: Load custom configuration
         run: |
+          echo $GITHUB_WORKSPACE
+          sudo mkdir -p /workdir
+          sudo chown $USER:$GROUPS /workdir
           git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
           ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
           [ -e files ] && mv files openwrt/files
