--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,10 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@master
+
+
       - name: apt update
         run: sudo apt-get update
 
