--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Make Config
         run: |
-        make menuconfig
-        mv $GITHUB_WORKSPACE/$CONFIG_FILE lede/.config
+        cd lede && make menuconfig
+        mv $CONFIG_FILE lede/.config
 
       - name: Download package
         run: |
