--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,8 @@ on:
     branches:
       - master
 
-
 env:
   CONFIG_FILE: .config
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
-  DIY_SH: diy.sh
-  SSH_ACTIONS: true
-  UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE: true
-  TZ: Asia/Shanghai
 
 jobs:
   build:
@@ -32,8 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
-
-      - name: apt update
+      - name: Apt update
         run: sudo apt-get update
 
       - name: Install apt lib
@@ -48,9 +39,18 @@ jobs:
       - name: Install feeds
         run: cd lede && ./scripts/feeds install -a
 
-      - name: Make Config
+      - name: Make config
         run: |
-        echo $GITHUB_WORKSPACE
-        ls
-        cd $GITHUB_WORKSPACE
-        ls
+        cd lede && make menuconfig
+        mv $GITHUB_WORKSPACE/$CONFIG_FILE lede/.config
+
+      - name: Download package
+        run: |
+          cd lede
+          make download -j8
+          find dl -size -1024c -exec ls -l {} \;
+          find dl -size -1024c -exec rm -f {} \;
+
+      - name: Compile
+        run: cd lede && make -j1 V=s
+
