--- a/test.yml
+++ b/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
-      - name: aaaaa
+      - name: aaaaaBBBB
         run: |
           echo $GITHUB_WORKSPACE
 
