--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
 
-      - name: Move File
-        run: mv $CONFIG_FILE lede/.config
-
       - name: Apt update
         run: sudo apt-get update
 
@@ -42,6 +39,8 @@ jobs:
       - name: Install feeds
         run: cd lede && ./scripts/feeds install -a
 
+      - name: Make menuconfig
+        run: mv $CONFIG_FILE lede/.config
 
       - name: Download package
         run: |
