--- a/.github/workflows/newifi.yml
+++ b/.github/workflows/newifi.yml
@@ -6,12 +6,21 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt
+name: Build OpenWrt LEDE NEWIFI D2
 
 on:
+  repository_dispatch:
+  #  release:
+  #    types: published
   push:
     branches:
       - master
+  #    paths:
+  #      - '.config'
+  schedule:
+    - cron: 0 8 */5 * *
+#  watch:
+#    types: started
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
@@ -20,11 +29,11 @@ env:
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
-  SSH_ACTIONS: false
+  SSH_ACTIONS: ture
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: true
-  UPLOAD_WETRANSFER: true
+  UPLOAD_COWTRANSFER: false
+  UPLOAD_WETRANSFER: false
   UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
 
