--- a/.github/workflows/openwrt_newifi_d2.yml
+++ b/.github/workflows/openwrt_newifi_d2.yml
@@ -70,6 +70,9 @@ jobs:
           chmod +x $DIY_P1_SH
           cd openwrt
           $GITHUB_WORKSPACE/$DIY_P1_SH
+      - name: SSH connection to Actions
+        uses: P3TERX/debugger-action@master
+        if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
       - name: Update feeds
         run: cd openwrt && ./scripts/feeds update -a
 
