--- a/.github/workflows/openwrt_newifi_d2.yml
+++ b/.github/workflows/openwrt_newifi_d2.yml
@@ -58,31 +58,33 @@ jobs:
           sudo timedatectl set-timezone "$TZ"
           sudo mkdir -p /workdir
           sudo chown $USER:$GROUPS /workdir
+          
       - name: Clone source code
         working-directory: /workdir
         run: |
           df -hT $PWD
-          git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+          git clone --depth 1 $REPO_URL -b $REPO_BRANCH sources
+          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/sources
+          
       - name: Load custom feeds
         run: |
-          [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+          [ -e $FEEDS_CONF ] && mv $FEEDS_CONF sources/feeds.conf.default
           chmod +x $DIY_P1_SH
-          cd openwrt
+          cd sources
           $GITHUB_WORKSPACE/$DIY_P1_SH
 
       - name: Update feeds
-        run: cd openwrt/openwrt && ./scripts/feeds update -a
+        run: cd sources && ./scripts/feeds update -a
 
       - name: Install feeds
-        run: cd openwrt/openwrt && ./scripts/feeds install -a
+        run: cd sources && ./scripts/feeds install -a
 
       - name: Load custom configuration
         run: |
-          [ -e files ] && mv files openwrt/files
-          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+          [ -e files ] && mv files sources/files
+          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE sources/.config
           chmod +x $DIY_P2_SH
-          cd openwrt
+          cd sources
           $GITHUB_WORKSPACE/$DIY_P2_SH
       - name: SSH connection to Actions
         uses: P3TERX/debugger-action@master
@@ -91,7 +93,7 @@ jobs:
       - name: Download package
         id: package
         run: |
-          cd openwrt
+          cd sources
           make defconfig
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
@@ -99,7 +101,7 @@ jobs:
       - name: Compile the firmware
         id: compile
         run: |
-          cd openwrt
+          cd sources
           echo -e "$(nproc) thread compile"
           make -j$(nproc) || make -j1 || make -j1 V=s
           echo "::set-output name=status::success"
@@ -115,13 +117,13 @@ jobs:
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
         with:
           name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-          path: openwrt/bin
+          path: sources/bin
 
       - name: Organize files
         id: organize
         if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
         run: |
-          cd openwrt/bin/targets/*/*
+          cd sources/bin/targets/*/*
           rm -rf packages
           echo "::set-env name=FIRMWARE::$PWD"
           echo "::set-output name=status::success"
