--- a/.github/workflows/openwrt_newifi_d2.yml
+++ b/.github/workflows/openwrt_newifi_d2.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           df -hT $PWD
           git clone --depth 1 $REPO_URL -b $REPO_BRANCH sources
-          ln -sf /workdir/openwrt $GITHUB_WORKSPACE/sources
+          ln -sf /workdir/sources $GITHUB_WORKSPACE/sources
           
       - name: Load custom feeds
         run: |
